# openmarket

./: .gitignore  CITATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  version.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  dataset.yml  feature.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md
benchmarks/baselines/: v0.1-sample.json  v0.1-sample.md
configs/: openmarket.example.env
crates/backtester/: Cargo.toml  README.md
crates/backtester/src/: blacklist.rs  calibration.rs  config.rs  main.rs  signal.rs  types.rs  volume.rs
crates/binary-outcome-trainer/: Cargo.toml
crates/binary-outcome-trainer/src/: lib.rs  main.rs
crates/common/: Cargo.toml  VERSION_GUIDE.md  build.rs
crates/common/src/: version.rs
crates/data-prep/: Cargo.toml
crates/data-prep/src/: main.rs
crates/dataset-downloader/: Cargo.toml
crates/dataset-downloader/src/: main.rs
crates/exchange-binance/: Cargo.toml  README.md
crates/exchange-binance/src/: config.rs  handlers.rs  main.rs  models.rs  services.rs  ta.rs  tasks.rs
crates/exchange-polymarket/: Cargo.toml
crates/exchange-polymarket/src/: config.rs  polymarket.rs  services.rs
crates/execution-engine/: Cargo.toml
crates/execution-engine/src/: config.rs  main.rs  models.rs  position.rs  signal_consumer.rs  wallet.rs
crates/paper-executor/: Cargo.toml
crates/paper-executor/src/: main.rs
crates/recorder/: Cargo.toml  README.md
crates/recorder/src/: config.rs  db.rs  handlers.rs  ingest.rs  lag.rs  lib.rs  main.rs  models.rs  services.rs
crates/signal-engine/: .gitignore  Cargo.toml  README.md
crates/signal-engine/src/: calibrated.rs  config.rs  drift.rs  handlers.rs  lib.rs  main.rs  models.rs  scanner.rs  state.rs  upstream.rs  volume.rs
crates/step3-parquet-export/: Cargo.toml
crates/step3-parquet-export/src/: lib.rs  main.rs  parquet_io.rs
crates/unified-backfill/: Cargo.toml
crates/unified-backfill/src/: lib.rs  main.rs  sqlite_fill.rs  table_config.rs
datasets/: README.md  dataset-card.md  download.py
datasets/hf/: README.md
docker/: docker-compose.yml  rust.Dockerfile
docs/: reproducibility.md
docs/architecture/: overview.md
docs/book/: book.toml
docs/book/src/: SUMMARY.md  intro.md
docs/data/: dataset-release.md  synchronization.md
docs/ml/: pipeline.md
docs/release/: HF-public-release-investigation-2026-06-30.md  LAUNCH-POST.md  PROJECT-STATUS.md  READINESS.md  RELEASE-NOTES-v0.1.0.md  RELEASE-NOTES-v0.2.0.md  RELEASE-NOTES-v0.3.0.md  RELEASE-NOTES-v0.4.0.md  RELEASE-NOTES-v0.5.0.md  RELEASE-NOTES-v0.5.1.md  RELEASE-NOTES-v0.5.2.md  STALE-CLAIMS-AUDIT-2026-07-01.md  bunny-cdn-archive-provenance.md  full-snapshot-batching.md  full-snapshot-publish-status.json  github-release-checklist.md  pipeline.md  releases.md  sample-export-2026-05-14_145928.md  snapshot-recovery.md  snapshot_recovery_status.json
examples/: README.md
models/: README.md
models/hf/: README.md
models/hf_staging/v0.1/: README.md  binary_outcome_metrics_1775453122006.json  binary_outcome_metrics_1775454070976.json  binary_outcome_metrics_1778654444636.json  binary_outcome_model.json  model_manifest.json
models/hf_staging/v0.2.1/: README.md  binary_outcome_metrics_1782949633193.json  binary_outcome_metrics_1782951964345.json  binary_outcome_metrics_1783207465270.json  (+3 more)
notebooks/: README.md  quickstart.ipynb  quickstart.md
paper/: .gitignore  .latexmkrc  bibliography.bib  main.tex  paper.md
paper/arxiv-submit/: 00README.txt  bibliography.bib  main.tex
paper/scripts/: compile.sh  export-arxiv.sh  generate_figures.py  install-mactex.sh
paper/sections/: appendix-architecture.tex  architecture.tex  backtesting.tex  conclusion.tex  contributions.tex  dataset.tex  discussion.tex  evaluation.tex  experimental-results.tex  future-work.tex  introduction.tex  limitations.tex  machine-learning.tex  microstructure-insights.tex  open-source-release.tex  related-work.tex  synchronization.tex
research/analysis/: analyze.py  live_ledger_analysis.py  v11_live_vs_backtest_diff.md
research/legacy-ml/: CLAUDE.md  ORIGINAL_README.md  README.md  debug_market.py
research/operational/: .gitignore  README.md
research/operational/rust-services/db-backup/: Cargo.toml
research/operational/rust-services/db-backup/src/: main.rs
research/operational/rust-services/execution-engine/: Cargo.toml  live_logs.sh  start.sh
research/operational/rust-services/execution-engine/src/: handlers.rs  main.rs  order_executor.rs  position.rs  signal_consumer.rs  state.rs
research/operational/rust-services/paper-executor/: Cargo.toml
research/operational/rust-services/paper-executor/src/: main.rs
research/strategy-evolution/live_bot_1_to_1_backtest/: Cargo.toml
research/strategy-evolution/live_bot_1_to_1_backtest/src/: config.rs  drift.rs  main.rs  models.rs  scanner.rs
research/strategy-evolution/v11_production/: Cargo.toml
research/strategy-evolution/v11_production/src/: config.rs  main.rs  signal.rs  types.rs
research/strategy-evolution/v12_backtester/: Cargo.toml  ml_phase1.py
research/strategy-evolution/v12_backtester/src/: main.rs
scripts/: release_sample_dataset.sh  repo-audit.sh
scripts/datasets/: aggregate_export_reports.py  export_many_ml_features.py  export_many_snapshots.py  export_ml_features.py  export_snapshot_fast.py  export_snapshot_to_parquet.py  export_snapshot_v2.py  inventory_bunny_snapshots.py  merge_partitions.py  post_ml_features_release.py  post_recovery_unified_release.py  recover_snapshot.py  reexport_corrupt_snapshots.py  requirements.txt  run_recovery_pipeline.py
scripts/hf/: benchmark_baseline.py  bump_dataset_version.py  create_repos.py  redact_manifest.py  release_split.py  requirements.txt  sync_version_with_tag.py  upload_dataset.py  upload_flat_sample.py  upload_model_cards.py  upload_models.py  upload_split.py  validate_sample_split.py
scripts/ml/: README.md  export_step3_from_parquet.py
scripts/release/: render_full_split_table.py
(+206 files in other folders)
