[package]
name = "binance-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
reqwest = { version = "0.12", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
zip = "2"
indicatif = "0.17"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
