[package]
name = "market-data-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rand = "0.8"
anyhow = "1.0"
csv = "1.3"
reqwest = { version = "0.12", features = ["json"] }
signal-engine = { path = "../signal-engine" }
