[package]
name = "step3-parquet-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Export step3 binary calibration features from unified Parquet"

[[bin]]
name = "export_step3_from_parquet"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
glob = "0.3"
polars = { version = "0.54", features = ["lazy", "parquet"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
signal-engine = { path = "../signal-engine" }