[package]
name = "live_bot_1_to_1_backtest"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.8"
statrs = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
prettytable = "0.10"
csv = "1.3"
