[package]
name = "v11_production"
version = "0.1.0"
edition = "2021"

[dependencies]
polars = { version = "0.36", features = ["lazy", "sql", "temporal", "describe"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rayon = "1.8"
statrs = "0.16"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17" # Progress bar
prettytable = "0.10"
lazy_static = "1.4"
csv = "1.3"
