[package]
name = "db-backup"
version = "1.0.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
# Async runtime + web framework
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["stream", "rustls-tls"], default-features = false }

# Compression (async gzip streaming)
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
tokio-util = { version = "0.7", features = ["io"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP middleware
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
