[package]
name = "execution-engine"
version = "1.0.0"
edition = "2024"
rust-version = "1.88.0"

[dependencies]
# Shared version constants
btc-common = { path = "../btc-common" }
# Polymarket official Rust SDK — orders, signing, gamma, WS orderbook
polymarket-client-sdk = { version = "0.4", features = ["clob", "gamma", "ws", "tracing"] }
rust_decimal = { version = "1.40", features = ["serde"] }
rust_decimal_macros = "1.40"

# Async runtime + web framework
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP / middleware
tower-http = { version = "0.6", features = ["cors", "trace"] }
reqwest = { version = "0.13", features = ["json", "rustls"] }

# Crypto / signing (re-exported by polymarket-client-sdk, but we need some direct access)
alloy = { version = "1.6", default-features = false, features = ["signer-local", "signers"] }
secrecy = { version = "0.10", features = ["serde"] }

# Utilities
anyhow = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
